# nova-rs

./: .appveyor.yml  .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  README.md  build.rs
docs/: ProjectCharter.md  async_await.md  contributing.md  faq.md  git.md  project_charter.md  project_pipeline.md  rust_conventions.md  rust_faq.md
src/: lib.rs
src/debugging/: mod.rs
src/loading/: mod.rs
src/logging/: mod.rs
src/rhi/: mod.rs  rhi.rs  rhi_enums.rs  rhi_structs.rs  rhi_traits.rs
src/rhi/dx12/: dx12_buffer.rs  dx12_command_allocator.rs  dx12_command_list.rs  dx12_descriptor_pool.rs  dx12_descriptor_set.rs  dx12_device.rs  dx12_fence.rs  dx12_framebuffer.rs  dx12_graphics_api.rs  dx12_image.rs  dx12_memory.rs  dx12_physical_device.rs  dx12_pipeline.rs  dx12_pipeline_interface.rs  dx12_queue.rs  dx12_renderpass.rs  dx12_semaphore.rs
src/rhi/vulkan/: vulkan_device.rs  vulkan_graphics_api.rs  vulkan_memory.rs  vulkan_physical_device.rs  vulkan_queue.rs
src/settings/: mod.rs  settings_structs.rs  settings_traits.rs
src/shaderpack/: mod.rs  shaderpack_data.rs
tools/git-hooks/: commit-msg  hooks-revision  post-commit  pre-commit
