[package]
name = "nova-rs"
version = "0.1.0"
authors = ["David Dubois <dexcelstraun7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-preview = { version = "=0.3.0-alpha.17", features = ["async-await", "nightly"] }
log = { version = "0.4.7", features = ["std"] }