[package]
name = "nova-rs"
version = "0.1.0"
authors = ["David Dubois <dexcelstraun7@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.1.0"
cgmath = { version = "0.17.0", features = ["swizzle"] }
d3d12-sys = "0.2.0"
failure = "0.1.5"
futures-preview = { version = "=0.3.0-alpha.17", features = ["async-await", "nightly"] }
log = { version = "0.4.7", features = ["std"] }
winapi = { version = "0.3", features = ["basetsd","d3d12","d3d12sdklayers","d3d12shader","d3dcommon","d3dcompiler","dxgi1_2","dxgi1_3","dxgi1_4","dxgi1_6","dxgidebug","dxgiformat","dxgitype","handleapi","minwindef","synchapi","unknwnbase","winbase","windef","winerror","winnt","winuser"] }
