[package]
name = "nova-rs"
version = "0.1.0"
authors = ["David Dubois <dexcelstraun7@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.1.0"
cgmath = { version = "0.17.0", features = ["swizzle"] }
failure = "0.1.5"
futures-preview = { version = "=0.3.0-alpha.17", features = ["async-await", "nightly"] }
log = { version = "0.4.7", features = ["std"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.40"
